# personal-webpage

./: bib_to_html.hs  go.sh  personal-webpage.cabal  site.hs  stack.yaml  test.hs
_site/: index.html  publications.html  talks.html
_site/css/: all.css  all.less  constants.less  footer.less  index.less  main.less  navbar.less  publications.less
_site/talks/: clin20.html  clin21.html  clin22.html  compositionality2019.html  conll20.html  esslli22-course.html  esslli22-workshop.html  lais22.html  lsd21.html  repl4nlp19.html  semspace19.html
csl/: html.csl
css/: all.css  all.less  constants.less  footer.less  index.less  main.less  navbar.less  publications.less
cv/: cv.tex
js/: collapsible.js
pages/: index.html  publications.html
publications/: pubs.bib
pubs/: aethel.md  ape.md  constag.md  deductive.md  diamonds.md  discoc.md  dyck.md  geometry.md  improving_bert.md  langpro.md  nada.md  nagda.md  nlp4if.md  npn.md  numbers.md  oyxoy.md  spindle.md  swahili.md  thesis.md
pubs/books/: thesis.md
pubs/proceedings/: ape.md  constag.md  dyck.md  geometry.md  (+6 more)
talks/: ape_neurips.md  clicit24.md  clin20.md  clin21.md  clin22.md  club24.md  compositionality2019.md  conll20.md  eacl23.md  epn-wg5-edi.md  esslli22-course.md  esslli22-workshop.md  esslli24.md  grolog.md  lais22.md  lsd21.md  lsd23_1.md  lsd23_2.md  ml-math-workshop-gothenburg.md  nagda_neurips.md  numbers.md  repl4nlp19.md  semspace19.md  talos24.md
templates/: embed-pdf.html  footer.html  last-paper.html  main.html  navbar.html  pub-list.html  pubs.html  talk-list.html  talk.html  talks.html
