name:                personal-webpage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/personal-webpage#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

executable personal-webpage
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       filepath,
                       pandoc,
                       pandoc-citeproc,
                       text
